--- a/.github/workflows/run-application.yml
+++ b/.github/workflows/run-application.yml
@@ -52,5 +52,5 @@ jobs:
         
     - name: Run Spring Boot
       run: |
-        cd Backend
+        cd Backend/Backend
         ./mvnw spring-boot:run 
